set(BINARY ${CMAKE_PROJECT_NAME}_tests)

file(GLOB_RECURSE TEST_SOURCES LIST_DIRECTORIES false *.h *.cpp)

set(SOURCES ${TEST_SOURCES})

add_executable(${BINARY} ${TEST_SOURCES})

add_test(NAME ${BINARY} COMMAND ${BINARY})

# maybe PUBLIC instead of INTERFACE here?
target_link_libraries(${BINARY} INTERFACE ${CMAKE_PROJECT_NAME}_lib gtest)